platform-apps/argocd/patch-argocd-image-updater-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-image-updater
spec:
  template:
    spec:
      containers:
      - name: argocd-image-updater
        volumeMounts:
        - name: script-ecr-volume
          mountPath: /app/acr.sh
          subPath: acr.sh
          readOnly: true
      volumes:
      - name: script-ecr-volume
        configMap:
          defaultMode: 493
          name: argocd-image-updater-acr-script
