platform-apps/argocd/ingress-certificate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.anishbista.xyz
    secretName: argocd-tls-cert
  rules:
  - host: argocd.anishbista.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
