platform-apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - '*.actionable-science-apps-wilcard-tls'
      secretName: argocd-tls-secret
  rules:
  - host: argo.anishbista60.xyz 
    http:
      paths:
      - pathType: /
        backend:
          service:
            name: argocd-server
            port:
              name: https

# tls.hosts: *.actionable-science-apps-wilcard-tls
# secretName: actionable-science-apps-wilcard-tls
# port.name: https
